--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
         "geist": "^1.2.0",
         "lucide-react": "^0.295.0",
         "million": "^2.6.4",
-        "next": "14.0.4",
+        "next": "^14.1.0",
         "react": "^18",
         "react-day-picker": "^8.9.1",
         "react-dom": "^18",
